JWT Authorisation done $ verificationToken implemented
