# src/controller/auth.controller.ts
@@ -1,17 +1,16 @@
 import { Delete, Get, Post, Put, Query, Route, Tags } from 'tsoa';
 import { IAuthController } from './interfaces';
-import { LogSuccess, LogWarning, LogError } from '../utils/logger';
+import { LogSuccess, LogWarning, LogError, LogInfo } from '../utils/logger';
 import { IUser } from '../domain/interfaces/IUser.interface';
 import { IAuth } from '../domain/interfaces/IAuth.interface';
 
 // ORM imports
-import { registerUser, loginUser, logoutUser } from '../domain/orm/User.orm';
+import { registerUser, loginUser, logoutUser, getUserByID } from '../domain/orm/User.orm';
 import { AuthResponse, ErrorResponse } from './types';
 
-@Tags('AuthController')
 @Route('/api/auth')
+@Tags('AuthController')
 export class AuthController implements IAuthController {
-  @Post('/register')
   public async registerUser(user: IUser): Promise<any> {
     let response: any = '';
 
@@ -25,27 +24,17 @@ export class AuthController implements IAuthController {
     }); */
       await registerUser(user)
         .then((r) => {
-          LogSuccess(
-            `[ /api/auth/register - AuthController ]  Register user: ${user.mail}`
-          );
+          LogSuccess(`[ /api/auth/register - AuthController ]  Register user: ${user.mail}`);
           response = {
             message: `USER REGISTERED successfully: ${user.name}`,
           };
         })
         .catch((e) => {
-          LogError(
-            `[ /api/auth/register - AuthController ] ERROR REGISTER USER: ${e}`
-          );
-          LogError(
-            `[ /api/auth/register - AuthController ] ERROR REGISTER USER: ${JSON.stringify(
-              user
-            )}`
-          );
+          LogError(`[ /api/auth/register - AuthController ] ERROR REGISTER USER: ${e}`);
+          LogError(`[ /api/auth/register - AuthController ] ERROR REGISTER USER: ${JSON.stringify(user)}`);
         });
     } else {
-      LogWarning(
-        `[ /api/auth/register - AuthController ] Register user: need a user to register.`
-      );
+      LogWarning(`[ /api/auth/register - AuthController ] Register user: need a user to register.`);
       response = {
         status: 400,
         message: 'Need a user to register.',
@@ -55,38 +44,21 @@ export class AuthController implements IAuthController {
     return response;
   }
 
-  @Post('/login')
+  /*   @Post('/login') */
   public async loginUser(auth: IAuth): Promise<any> {
-
     let response: AuthResponse | ErrorResponse | undefined;
 
+    LogInfo(`[ LOGIN - CONTROLLER ] User: ${JSON.stringify(auth)}`);
+
     if (auth) {
-     await loginUser(auth)
-        .then((r) => {
-          LogSuccess(
-            `[ /api/auth/register - AuthController ] LOGIN: ${JSON.stringify(
-              auth.mail
-            )}`
-          );
-          response = {
-            message: `USER LOGIN successfully: ${auth.mail}`,
-            token: r.token, // JWT generated for logged in user
-          };
-        })
-        .catch((e) => {
-          LogError(
-            `[ /api/auth/login - AuthController ] ERROR LOGIN USER: ${e}`
-          );
-          LogError(
-            `[ /api/auth/login - AuthController ] ERROR LOGIN USER: ${JSON.stringify(
-              auth.mail
-            )}`
-          );
-        });
+      LogSuccess(`[ /api/auth/register - AuthController ] LOGIN: ${JSON.stringify(auth.mail)}`);
+      let data = await loginUser(auth);
+      response = {
+        token: data.token,
+        message: `Welcome, ${data.user.name}`,
+      };
     } else {
-      LogWarning(
-        `[ /api/auth/login - AuthController ] LOGIN: needs Auth Entity (email && password) to login.`
-      );
+      LogWarning(`[ /api/auth/login - AuthController ] LOGIN: needs Auth Entity (email && password) to login.`);
       response = {
         error: '[AUTH ERROR]: Email & Password are needed',
         message: 'Please, provide a email && password to logi',
@@ -96,7 +68,26 @@ export class AuthController implements IAuthController {
     return response;
   }
 
-  @Post('/logout')
+  /**
+   * Endpoint to retreive the User in the Collection "Users" of DB
+   * Middleware: Validate JWT
+   * In headers you must add the x-access-token with a valid JWT
+   * @param {string} id Id of user to retreive (optional)
+   * @returns All user o user found by iD
+   */
+  @Get('/me')
+  public async userData(@Query() id: string): Promise<any> {
+    let response: any = '';
+
+    if (id) {
+      LogSuccess(`[ /api/auth/me - AuthController ] Get User Data By ID: ${id} `);
+      response = await getUserByID(id);
+    }
+
+    return response;
+  }
+
+  /*  @Post('/logout') */
   public async logoutUser(): Promise<any> {
     // TODO: Close session of user
     let response: any = '';
